src/objects/Callout_Failed_Record__c.object
<CustomObject>
    <fields>
        <fullName>Callout_Type__c</fullName>
        <label>Callout Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SendMessage</fullName>
                </value>
                <value>
                    <fullName>ElevationClosure</fullName>
                </value>
                <value>
                    <fullName>CloseSubKCase</fullName>
                </value>
                <value>
                    <fullName>RejectSubKCase</fullName>
                </value>
                <value>
                    <fullName>SubKAddNotesToHPE</fullName>
                </value>
                <value>
                    <fullName>ParklotForCloseCase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failed_Id__c</fullName>
        <label>Failed Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Type__c</fullName>
        <description>call out 失败的ReturnError
call out exception包括timeout之类的exception
Resended已经被地方接收，不需要再次接收。</description>
        <label>Failure Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ReturnError</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Indicator</label>
        <type>Checkbox</type>
    </fields>
    <label>Callout Failed Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Callout_Type__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Failed_Id__c</columns>
        <columns>Failure_Type__c</columns>
        <columns>Sync_Indicator__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>fal-{00000}</displayFormat>
        <label>Call Out Failed Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>